1998-07-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-rpc.adb: Use new soft link RPC_Shutdown.

	* s-gasoli.adb,s-gasoli.ads: Add two new soft links
	(Global_Termination and RPC_Shutdown).

	* s-garter.adb: Remove termination task and add a new soft link
 	Global_Termination. This procedure is executed at the end of the
	main subprogram by the main partition. This fixes a latent error
	(difficult to detect). Update the no activity test (because we
	have one less active task).
	
	* s-garhea.adb, s-garhea.ads: Remove Register_RPC_Shutdown and use
 	a new soft link from s-gasoli. Fix a problem that occurs in the
 	ACVC tests when a specific s-rpc is used. System_RPC_Shutdown was
 	not registered. An exception was raised transparently because it
	was raised in the termination task (which does not exist anymore).

	* s-ganobl.adb: Handle send with len = 0 with a special mechanism
 	(select) because send does not behave the same way on different
	platforms (especially sgi).

	* s-garter.adb: Solve termination problem caused by a
	misunderstanding of gnat termination and a bug in gnat awake_count 
	computation.

1998-07-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.ads: Add some stat info to count sigpoll interrupts and 
	sigpoll timeouts.

	* s-ganobl.adb: Merge Set_Asynchronous and Set_Non_Blocking
 	because they were both executing Fcntl (FD, F_Setfl, ...) such a
 	way that the flag status of the first call was removed by the
 	second. We have only one call to Fcntl with Fasync + Fndelay. Add
 	some stat info to count sigpoll interrupts and sigpoll timeouts.

	* s-gasoli.adb: Add some debugging info.

	* Makefile.am, Makefile.in: Just recompile linktest and bind
	it. Don't try to link it.
	
1998-07-20  Pascal Obry  <obry@gnat.com>

	* Makefile.am, Makefile.in: Fix a bug for NT build.

1998-07-15  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Fix a bug concerning inlined gnatlib
 	regeneration introduced by new linktest.
